# xpack

./: .gitignore  README-bson.md  README-en.md  README.md  bson.h  bson_builder.h  bson_decoder.h  bson_encoder.h  bson_type.h  config.h  extend.h  json.h  json_data.h  json_decoder.h  json_encoder.h  l1l2_expand.h  mysql.h  mysql_decoder.h  numeric.h  rapidjson_custom.h  sqlite.h  sqlite_decoder.h  traits.h  util.h  xdecoder.h  xencoder.h  xml.h  xml_decoder.h  xml_encoder.h  xpack.h  xpack.pri  xtype.h  yaml.h  yaml_decoder.h  yaml_encoder.h
example/: alias.cpp  base.cpp  bitfield.cpp  build_json.cpp  char_array.cpp  custom.cpp  encoder.cpp  enum.cpp  inherit.cpp  json-data.cpp  json_decoder.cpp  makefile  msvc.make  my_decoder.cpp  my_encoder.cpp  mysql.cpp  sharedptr.cpp  sqlite.cpp  union1.cpp  xml-content.cpp  xml.cpp  xpack_out.cpp  xtype.cpp  xtype_advance.cpp  yaml.cpp
gtest/: bson_test.cpp  gtest_stub.h  json.cpp  makefile  msvc.make  test.cpp  test.json  test.xml
mytest/: .gitignore  CMakeLists.txt  README.md
mytest/01_first/: CMakeLists.txt  cad2json.cpp  caddata.h  json2struct.cpp  test.cad  test.json  teststruct.h
mytest/02_second/: CMakeLists.txt  testenum.cpp
mytest/cmake/: configuration.cmake
mytest/cmake/modules/: Findrapidjson.cmake  Findrapidxml.cmake  Findxpack.cmake
